# neo-portfolio

./: .gitignore  Dockerfile  README.md  TODO.md  add_projects.py  clean_dates.py  data_new_projects.json  data_portfolio.posts.json  del.py  main.py  new_projects.json  portfolio.achievements.json  portfolio.posts.json  pyproject.toml  requirements.txt  script_add_projects.py  script_migrate_links.py
.history/: pyproject_20250313230609.toml  pyproject_20250313231049.toml
.history/core/: models_20250313232046.py  models_20250313232107.py  models_20250313232115.py
core/: admin.py  model_views.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_project_github_repo.py  0003_award_links_certificate_links_image_links_page_links_and_more.py  0004_remove_award_link_remove_certificate_link_and_more.py
core/templates/: 404.html  500.html  about.html  award.html  base.html  certificate.html  contact.html  course.html  education.html  experience.html  filter.html  footer.html  image.html  list.html  navbar.html  project.html  skill.html
core/templatetags/: filters.py
portfolio/: settings.py  urls.py
static/scss/: main.scss
